README work, __init__.py work

--- a/samples/llama2_enforcer.ipynb
+++ b/samples/llama2_enforcer.ipynb
@@ -80,13 +80,8 @@
    "outputs": [],
    "source": [
     "from typing import Tuple\n",
-    "from characterlevelparser import CharacterLevelParser\n",
     "import pandas as pd\n",
-    "from jsonschemaparser import JsonSchemaParser\n",
-    "from regexparser import RegexParser\n",
-    "from characterlevelparser import StringParser\n",
-    "from transformerenforcer import generate_enforced\n",
-    "from datamodel_code_generator.parser.jsonschema import JsonSchemaObject\n",
+    "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser, generate_enforced\n",
     "\n",
     "\n",
     "def run(message: str,\n",
@@ -121,7 +116,7 @@
     "    if required_str:\n",
     "        parser = StringParser(required_str)\n",
     "    if required_json_schema:\n",
-    "        parser = JsonSchemaParser(JsonSchemaObject(**required_json_schema))\n",
+    "        parser = JsonSchemaParser(required_json_schema)\n",
     "\n",
     "    if parser:\n",
     "        output = generate_enforced(model, tokenizer, parser, **generate_kwargs)\n",
