Minor bugfixes, cleaning up example notebook

--- a/samples/llama2_enforcer.ipynb
+++ b/samples/llama2_enforcer.ipynb
@@ -10,16 +10,8 @@
     "%autoreload 2\n",
     "\n",
     "# https://huggingface.co/spaces/huggingface-projects/llama-2-13b-chat/tree/main\n",
-    "from charset_normalizer.utils import is_punctuation, is_symbol, unicode_range, is_accentuated, is_latin, \\\n",
-    "    remove_accent, is_separator, is_cjk, is_case_variable, is_hangul, is_katakana, is_hiragana, is_ascii, is_thai\n",
-    "\n",
-    "from threading import Thread\n",
-    "from typing import Iterator, List, Set\n",
-    "\n",
     "import torch\n",
-    "from transformers import AutoConfig, AutoModelForCausalLM, AutoTokenizer, TextIteratorStreamer\n",
-    "\n",
-    "from regexparser import SequentialPattern\n"
+    "from transformers import AutoConfig, AutoModelForCausalLM, AutoTokenizer"
    ]
   },
   {
@@ -43,8 +35,7 @@
     "    )\n",
     "else:\n",
     "    model = None\n",
-    "fast_tokenizer = False\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id, use_fast=fast_tokenizer)"
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)"
    ]
   },
   {
@@ -79,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Tuple\n",
     "import pandas as pd\n",
     "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser, generate_enforced\n",
     "\n",
@@ -125,21 +115,14 @@
     "\n",
     "    sequence = output.sequences[0]\n",
     "    string_output = tokenizer.decode(sequence, skip_special_tokens=True, skip_prompt=True)\n",
-    "    enforced_scores = output.enforced_scores\n",
-    "    \n",
-    "    pd.set_option('display.width', 1000)\n",
-    "    pd.set_option('display.max_columns', 10)\n",
-    "    pd.set_option('display.max_rows', 200)\n",
-    "    print(enforced_scores)\n",
-    "    return string_output\n",
-    "    \n",
-    "    #t = Thread(target=model.generate, kwargs=generate_kwargs)\n",
-    "    #t.start()\n",
-    "\n",
-    "    # outputs = []\n",
-    "    # for text in streamer:\n",
-    "    #     outputs.append(text)\n",
-    "    #   yield ''.join(outputs)\n"
+    "    if parser:\n",
+    "        enforced_scores_dict = output.enforced_scores\n",
+    "        enforced_scores = pd.DataFrame(enforced_scores_dict)\n",
+    "        pd.set_option('display.width', 1000)\n",
+    "        pd.set_option('display.max_columns', 10)\n",
+    "        pd.set_option('display.max_rows', 200)\n",
+    "        print(enforced_scores)\n",
+    "    return string_output\n"
    ]
   },
   {
@@ -154,21 +137,21 @@
     "MAX_MAX_NEW_TOKENS = 200\n",
     "DEFAULT_MAX_NEW_TOKENS = 100\n",
     "MAX_INPUT_TOKEN_LENGTH = 4000\n",
-    "floating_point_regex = 'Michael Jordan was Born in (\\d)+(.\\d+)?'\n",
+    "\n",
     "integer_regex = ' Michael Jordan was Born in (\\d)+.'\n",
     "question = 'In what year was Michael Jordan Born? Please answer using only a number, without any prefix or suffix.'\n",
     "\n",
-    "# print(\"Without enforcing\")\n",
-    "# result = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
-    "# print(result)\n",
+    "print(\"Without enforcing\")\n",
+    "result = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
+    "print(result)\n",
     "\n",
     "print(f\"With regex force. Regex: {integer_regex}\")\n",
     "result = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_regex=integer_regex)\n",
     "print(result)\n",
     "\n",
-    "# print(\"With string force\")\n",
-    "# result = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_str='The answer is 1963')\n",
-    "# print(result)\n"
+    "print(\"With string force\")\n",
+    "result = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_str='The answer is 1963')\n",
+    "print(result)\n"
    ]
   },
   {
@@ -198,22 +181,17 @@
     "\n",
     "question_with_schema = f'{question}{AnswerFormat.schema_json()}'\n",
     "\n",
-    "print(f\"With json schema force force.\")\n",
-    "result = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_json_schema=AnswerFormat.schema())\n",
+    "print(f\"Without json schema enforcing (but with prompt engineering).\")\n",
+    "result = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
     "print(result)\n",
     "\n",
-    "# abcdef\n",
-    "# michael\n",
-    "# and\n",
-    "# ing\n",
-    "# gratify\n",
-    "# ing\n",
-    "# print(f\"Without json schema force force.\")\n",
-    "# result = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
-    "# print(result)\n",
-    "# \"first_name\":\"Michael\", \"last_name\"\n",
+    "print(f\"With json schema enforcing.\")\n",
+    "result = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_json_schema=AnswerFormat.schema())\n",
+    "print(result)\n",
+    "# { \"first_name\":\"Michael\", \"last_name\":\".Jordan\", \"year_of_birth\":1963, \"num_seasons_in_nba\":15}\n",
     "\n",
-    "# { \"first_name\":\"Michael\", \"last_name\":\".Jordan\", \"year_of_birth\":1963, \"num_seasons_in_nba\":15}\n"
+    "\n",
+    "\n"
    ]
   }
  ],
