Adding more details to the sample notebook

--- a/samples/llama2_enforcer.ipynb
+++ b/samples/llama2_enforcer.ipynb
@@ -395,6 +395,46 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The enforced run outputted the following:\n",
+    "\n",
+    "```json\n",
+    "{ \"first_name\":\"Michael\", \"last_name\":\":Jordan\", \"year_of_birth\":1963, \"num_seasons_in_nba\":15}\n",
+    "```\n",
+    "\n",
+    "The unenforced run outputted the following:\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "\"title\": \"AnswerFormat\",\n",
+    "\"type\": \"object\",\n",
+    "\"properties\": {\n",
+    "\"first_name\": {\n",
+    "\"title\": \"First Name\",\n",
+    "\"type\": \"string\"\n",
+    "},\n",
+    "\"last_name\": {\n",
+    "\"title\": \"Last Name\",\n",
+    "\"type\": \"string\"\n",
+    "},\n",
+    "\"year_```\n",
+    "\n",
+    "Both runs used the exact same prompt. Token index 3 shows where the enforcer had to be aggressive:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "   generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
+    "\n",
+    "3            first                 4102         0.000322         title               3257       0.944336\n",
+    "```\n",
+    "\n",
+    "The language model was trying to generate the word \"title\" (post softmax score of 0.944336) but the enforcer made the \"first\" token (post softmax score of 0.000322) be the main candidate instead.\n",
+    "This can be used to further improve the prompt engineering, as we generally want to avoid timesteps that cause the enforcer to be this aggressive, as it increases the likelyhood of hallucinations. For example, The langchain project removes the \"title\" from the json schema, probably for this reason. See here: https://github.com/langchain-ai/langchain/blob/cfa2203c626a2287d60c1febeb3e3a68b77acd77/libs/langchain/langchain/output_parsers/pydantic.py#L40\n"
+   ]
   }
  ],
  "metadata": {
