--- a/samples/llama2_enforcer.ipynb
+++ b/samples/llama2_enforcer.ipynb
@@ -421,13 +421,14 @@
     "\"title\": \"Last Name\",\n",
     "\"type\": \"string\"\n",
     "},\n",
-    "\"year_```\n",
+    "\"year_\n",
+    "```\n",
     "\n",
     "Both runs used the exact same prompt. Token index 3 shows where the enforcer had to be aggressive:\n",
     "\n",
     "\n",
     "```\n",
-    "   generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
+    "generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
     "\n",
     "3            first                 4102         0.000322         title               3257       0.944336\n",
     "```\n",
