Readding notebook outputs

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -21,12 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "# !pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
-    "# !huggingface-cli login\n",
+    "!pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
+    "!huggingface-cli login\n",
     "\n",
     "import torch\n",
     "from transformers import AutoConfig, AutoModelForCausalLM, AutoTokenizer"
@@ -34,9 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:19<00:00,  9.52s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "model_id = 'meta-llama/Llama-2-7b-chat-hf'\n",
     "device = 'cuda'\n",
@@ -72,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +192,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question:\n",
+      "In what year was Michael Jordan Born? Please answer using only a number, without any prefix or suffix.\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "Without enforcing:\n",
+      "   Thank you for asking! Michael Jordan was born in the year 1963.\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "With regex force. Regex:  Michael Jordan was Born in (\\d)+.\n",
+      "   generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
+      "0                ▁                29871         1.000000             ▁              29871       1.000000\n",
+      "1          Michael                24083         0.000111        ▁Thank               3374       0.605469\n",
+      "2          ▁Jordan                18284         1.000000       ▁Jordan              18284       1.000000\n",
+      "3             ▁was                  471         1.000000          ▁was                471       1.000000\n",
+      "4            ▁Born                19298         0.000005         ▁born               6345       1.000000\n",
+      "5              ▁in                  297         1.000000           ▁in                297       1.000000\n",
+      "6                ▁                29871         0.359375          ▁the                278       0.640625\n",
+      "7                1                29896         1.000000             1              29896       1.000000\n",
+      "8                9                29929         1.000000             9              29929       1.000000\n",
+      "9                6                29953         1.000000             6              29953       1.000000\n",
+      "10               3                29941         1.000000             3              29941       1.000000\n",
+      "11               .                29889         1.000000             .              29889       1.000000\n",
+      "12            </s>                    2         0.924805          </s>                  2       0.924805\n",
+      "  Michael Jordan was Born in 1963.\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "With string force:\n",
+      "  generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
+      "0             The                 1576         0.000000             ▁              29871       1.000000\n",
+      "1         ▁answer                 1234         0.234619     ▁question               1139       0.270020\n",
+      "2             ▁is                  338         0.031311           ▁to                304       0.929688\n",
+      "3               ▁                29871         0.595703             ▁              29871       0.595703\n",
+      "4               1                29896         0.974609             1              29896       0.974609\n",
+      "5               9                29929         0.999023             9              29929       0.999023\n",
+      "6               6                29953         0.998535             6              29953       0.998535\n",
+      "7               3                29941         0.997559             3              29941       0.997559\n",
+      "8            </s>                    2         0.005436             .              29889       0.988281\n",
+      " The answer is 1963\n"
+     ]
+    }
+   ],
    "source": [
     "DEFAULT_SYSTEM_PROMPT = \"\"\"\\\n",
     "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe.  Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\\n\\nIf a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\\\n",
@@ -220,9 +285,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question:\n",
+      "Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]}\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "With json schema enforcing:\n",
+      "   generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
+      "0                ▁                29871         1.000000             ▁              29871       1.000000\n",
+      "1               ▁{                  426         0.000006           ▁Of               4587       0.993652\n",
+      "2               ▁\"                  376         0.003122        <0x0A>                 13       0.996582\n",
+      "3            first                 4102         0.000220         title               3257       0.998047\n",
+      "4                _                29918         1.000000             _              29918       1.000000\n",
+      "5             name                  978         1.000000          name                978       1.000000\n",
+      "6               \":                 1115         1.000000            \":               1115       1.000000\n",
+      "7               ▁\"                  376         1.000000            ▁\"                376       1.000000\n",
+      "8          Michael                24083         0.991699       Michael              24083       0.991699\n",
+      "9               \",                  613         0.989258            \",                613       0.989258\n",
+      "10              ▁\"                  376         1.000000            ▁\"                376       1.000000\n",
+      "11            last                 4230         1.000000          last               4230       1.000000\n",
+      "12               _                29918         1.000000             _              29918       1.000000\n",
+      "13            name                  978         1.000000          name                978       1.000000\n",
+      "14              \":                 1115         1.000000            \":               1115       1.000000\n",
+      "15              ▁\"                  376         1.000000            ▁\"                376       1.000000\n",
+      "16               J                29967         1.000000             J              29967       1.000000\n",
+      "17             ord                  536         1.000000           ord                536       1.000000\n",
+      "18              an                  273         1.000000            an                273       1.000000\n",
+      "19              \",                  613         1.000000            \",                613       1.000000\n",
+      "20              ▁\"                  376         1.000000            ▁\"                376       1.000000\n",
+      "21            year                 6360         1.000000          year               6360       1.000000\n",
+      "22               _                29918         1.000000             _              29918       1.000000\n",
+      "23              of                  974         1.000000            of                974       1.000000\n",
+      "24               _                29918         1.000000             _              29918       1.000000\n",
+      "25               b                29890         1.000000             b              29890       1.000000\n",
+      "26            irth                 7515         1.000000          irth               7515       1.000000\n",
+      "27              \":                 1115         1.000000            \":               1115       1.000000\n",
+      "28               1                29896         0.000003             ▁              29871       1.000000\n",
+      "29               9                29929         1.000000             9              29929       1.000000\n",
+      "30               6                29953         1.000000             6              29953       1.000000\n",
+      "31               3                29941         0.999512             3              29941       0.999512\n",
+      "32               ,                29892         0.998047             ,              29892       0.998047\n",
+      "33              ▁\"                  376         1.000000            ▁\"                376       1.000000\n",
+      "34             num                 1949         1.000000           num               1949       1.000000\n",
+      "35               _                29918         1.000000             _              29918       1.000000\n",
+      "36              se                  344         1.000000            se                344       1.000000\n",
+      "37           asons                 7040         1.000000         asons               7040       1.000000\n",
+      "38               _                29918         1.000000             _              29918       1.000000\n",
+      "39              in                  262         1.000000            in                262       1.000000\n",
+      "40               _                29918         1.000000             _              29918       1.000000\n",
+      "41               n                29876         1.000000             n              29876       1.000000\n",
+      "42              ba                 2291         1.000000            ba               2291       1.000000\n",
+      "43              \":                 1115         1.000000            \":               1115       1.000000\n",
+      "44               1                29896         0.140869             ▁              29871       0.849121\n",
+      "45               5                29945         0.944824             5              29945       0.944824\n",
+      "46               }                29913         0.166626            ▁}                500       0.833008\n",
+      "47            </s>                    2         0.154663        <0x0A>                 13       0.785645\n",
+      "   { \"first_name\": \"Michael\", \"last_name\": \"Jordan\", \"year_of_birth\":1963, \"num_seasons_in_nba\":15}\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "Without json schema enforcing (but with prompt engineering):\n",
+      "   Of course, I'd be happy to help! Here's the information about Michael Jordan in the format you requested:\n",
+      "{\n",
+      "\"title\": \"AnswerFormat\",\n",
+      "\"type\": \"object\",\n",
+      "\"properties\": {\n",
+      "\"first_name\": {\n",
+      "\"title\": \"First Name\",\n",
+      "\"type\": \"string\",\n",
+      "\"description\": \"Michael Jordan's first name\"\n",
+      "\"required\": true\n",
+      "},\n",
+      "\"last_name\": {\n",
+      "\n",
+      "\"title\n"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel\n",
     "\n",
