Example notebook documentation

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -7,7 +7,7 @@
     "## Setting up the COLAB runtime (user action required)\n",
     "\n",
     "This colab-friendly notebook is targeted at demoing the enforcer on LLAMA2. It is able to be executed on a free GPU on Google Colab.\n",
-    "Make sure that your runtime is set to GPU (top right corner arrow -> change runtime type -> GPU - T4 at the time of creating this notebook)."
+    "Make sure that your runtime is set to GPU (Menu Bar -> Runtime -> Change runtime type -> GPU - T4 at the time of creating this notebook. [Guide here](https://www.codesansar.com/deep-learning/using-free-gpu-tpu-google-colab.htm))."
    ]
   },
   {
@@ -16,11 +16,10 @@
    "source": [
     "## Gathering huggingface credentials (user action required)\n",
     "\n",
-    "We begin by importing the dependencies. This demo uses llama2, so you will have to create a free huggingface account, request access to the llama2 model, create an API key, and insert it when executing the next cell will request it. Links:\n",
+    "We begin by importing the dependencies. This demo uses llama2, so you will have to create a free huggingface account, request access to the llama2 model, create an access token, and insert it when executing the next cell will request it. Links:\n",
     "\n",
-    "https://huggingface.co/meta-llama/Llama-2-7b-chat-hf\n",
-    "\n",
-    "https://huggingface.co/settings/tokens\n"
+    "- [Request access to llama model](https://huggingface.co/meta-llama/Llama-2-7b-chat-hf). See the \"Access Llama 2 on Hugging Face\" section.\n",
+    "- [Create huggingface access token](https://huggingface.co/settings/tokens)\n"
    ]
   },
   {
