--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -119,7 +119,9 @@
    "source": [
     "## Calling generate_enforced() instead of model.generate()\n",
     "\n",
-    "The main function is fairly straightforward, except for the optional parameters ```required_regex``` / ```required_str``` / ```required_json_schema``` which activate the appropriate ```CharacterLevelParser``` to be used by the format enforcer."
+    "The main function is fairly straightforward, except for the optional parameters ```required_regex``` / ```required_str``` / ```required_json_schema``` which activate the appropriate ```CharacterLevelParser``` to be used by the format enforcer.\n",
+    "\n",
+    "The implementation includes ```output_scores=True``` when calling ```generate_enforced()```, which returns diagnostic information about the enforcer's actions. We will use this to understand the results later in this notebook."
    ]
   },
   {
@@ -194,9 +196,7 @@
     "## JSON Use case\n",
     "\n",
     "Now we demnostrate using ```JsonSchemaParser```. We create a pydantic model, generate the schema from it, and use that to enforce the format.\n",
-    "The output will always be in a format that can be parsed by the parser.\n",
-    "The run() function we implemented in the previous cell includes ```output_scores=True``` parameter, which returns diagnostic information about the enforcer's actions.\n",
-    "We print it as a dataframe before the results. It shows in which timesteps the enforcer had to intervene, and can observe which token was most likely to be selected if the enforcer had not intervened."
+    "The output will always be in a format that can be parsed by the parser."
    ]
   },
   {
