Removing redundant parameters from sample notebook

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "## Setting up the prompt for the specific language model\n",
     "\n",
-    "We set up the prompting style according to the demo at https://huggingface.co/spaces/huggingface-projects/llama-2-13b-chat/blob/main/app.py ."
+    "We set up the prompting style according to the demo at https://huggingface.co/spaces/huggingface-projects/llama-2-13b-chat/blob/main/app.py . We simplify the implementation a bit as we don't need chat history for this demo."
    ]
   },
   {
@@ -93,24 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_prompt(message: str, chat_history: list[tuple[str, str]],\n",
-    "               system_prompt: str) -> str:\n",
+    "def get_prompt(message: str, system_prompt: str) -> str:\n",
     "    texts = [f'<s>[INST] <<SYS>>\\n{system_prompt}\\n<</SYS>>\\n\\n']\n",
     "    # The first user input is _not_ stripped\n",
     "    do_strip = False\n",
-    "    for user_input, response in chat_history:\n",
-    "        user_input = user_input.strip() if do_strip else user_input\n",
-    "        do_strip = True\n",
-    "        texts.append(f'{user_input} [/INST] {response.strip()} </s><s>[INST] ')\n",
     "    message = message.strip() if do_strip else message\n",
     "    texts.append(f'{message} [/INST]')\n",
-    "    return ''.join(texts)\n",
-    "\n",
-    "\n",
-    "def get_input_token_length(message: str, chat_history: list[tuple[str, str]], system_prompt: str) -> int:\n",
-    "    prompt = get_prompt(message, chat_history, system_prompt)\n",
-    "    input_ids = tokenizer([prompt], return_tensors='np', add_special_tokens=False)['input_ids']\n",
-    "    return input_ids.shape[-1]"
+    "    return ''.join(texts)"
    ]
   },
   {
@@ -135,7 +124,6 @@
     "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser, generate_enforced\n",
     "\n",
     "def run(message: str,\n",
-    "        chat_history: list[tuple[str, str]],\n",
     "        system_prompt: str,\n",
     "        max_new_tokens: int = 1024,\n",
     "        temperature: float = 0.8,\n",
@@ -144,7 +132,7 @@
     "        required_regex: Optional[str] = None,\n",
     "        required_str: Optional[str] = None,\n",
     "        required_json_schema: Optional[dict] = None) -> Tuple[str, Optional[pd.DataFrame]]:\n",
-    "    prompt = get_prompt(message, chat_history, system_prompt)\n",
+    "    prompt = get_prompt(message, system_prompt)\n",
     "    inputs = tokenizer([prompt], return_tensors='pt', add_special_tokens=False, return_token_type_ids=False).to(device)\n",
     "    \n",
     "    generate_kwargs = dict(\n",
@@ -258,13 +246,13 @@
     "print('\\n----------------------------------------\\n')\n",
     "\n",
     "print(f\"With json schema enforcing:\")\n",
-    "result, enforced_scores = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_json_schema=AnswerFormat.schema())\n",
+    "result, enforced_scores = run(question_with_schema, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_json_schema=AnswerFormat.schema())\n",
     "print(result)\n",
     "\n",
     "print('\\n----------------------------------------\\n')\n",
     "\n",
     "print(f\"Without json schema enforcing:\")\n",
-    "result, _ = run(question_with_schema, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
+    "result, _ = run(question_with_schema, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
     "print(result)\n",
     "\n"
    ]
@@ -447,13 +435,13 @@
     "print('\\n----------------------------------------\\n')\n",
     "\n",
     "print(\"Without enforcing:\")\n",
-    "result, _ = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
+    "result, _ = run(question, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
     "print(result)\n",
     "\n",
     "print('\\n----------------------------------------\\n')\n",
     "\n",
     "print(f\"With regex force. Regex: {integer_regex}\")\n",
-    "result, enforced_scores = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_regex=integer_regex)\n",
+    "result, enforced_scores = run(question, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_regex=integer_regex)\n",
     "print(\"Language model output:\")\n",
     "print(result)\n",
     "print(\"Enforcer intervention table:\")\n",
@@ -462,7 +450,7 @@
     "print('\\n----------------------------------------\\n')\n",
     "\n",
     "print(\"With string force:\")\n",
-    "result, enforced_scores = run(question, chat_history=[], system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_str='The answer is 1963')\n",
+    "result, enforced_scores = run(question, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_str='The answer is 1963')\n",
     "print(\"Language model output:\")\n",
     "print(result)\n",
     "print(\"Enforcer intervention table:\")\n",
